--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepare": "husky"
   },
   "dependencies": {
     "pinia": "^3.0.3",
@@ -32,13 +33,21 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.32.0",
     "eslint-plugin-vue": "~10.2.0",
+    "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "jsdom": "^26.1.0",
+    "lint-staged": "^16.1.2",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
